parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> statements
Rule 2     start -> empty
Rule 3     statements -> statements statement
Rule 4     statements -> statement
Rule 5     empty -> <empty>
Rule 6     statement -> ID EQUALS expr
Rule 7     statement -> ID EQUALS ID
Rule 8     statement -> PRINT LPARENTHESIS VAR LPARENTHESIS statement RPARENTHESIS RPARENTHESIS
Rule 9     statement -> PRINT LPARENTHESIS statement RPARENTHESIS
Rule 10    statement -> expr
Rule 11    expr -> expr DIVIDE expr
Rule 12    expr -> expr MULTIPLY expr
Rule 13    expr -> expr ADD expr
Rule 14    expr -> expr SUBTRACT expr
Rule 15    expr -> expr MODULUS expr
Rule 16    expr -> expr EEQUALS expr
Rule 17    expr -> expr GREATER expr
Rule 18    expr -> expr SMALLER expr
Rule 19    expr -> expr AND expr
Rule 20    expr -> expr OR expr
Rule 21    expr -> expr NOTEQUALS expr
Rule 22    expr -> expr GEQUAL expr
Rule 23    expr -> expr SEQUAL expr
Rule 24    expr -> expr INCREMENT
Rule 25    expr -> expr DECREMENT
Rule 26    expr -> ID
Rule 27    expr -> INT
Rule 28    expr -> FLOAT
Rule 29    expr -> STRING
Rule 30    expr -> CHAR
Rule 31    expr -> BOOL
Rule 32    statement -> IF expr LCURLY statement RCURLY
Rule 33    statement -> IF expr LCURLY statement RCURLY ELSE LCURLY statement RCURLY
Rule 34    statement -> LOOP LPARENTHESIS expr COMMA expr RPARENTHESIS LCURLY statement RCURLY

Terminals, with rules where they appear

ADD                  : 13
AND                  : 19
BOOL                 : 31
CHAR                 : 30
COMMA                : 34
DECREMENT            : 25
DIVIDE               : 11
EEQUALS              : 16
ELSE                 : 33
EQUALS               : 6 7
FLOAT                : 28
GEQUAL               : 22
GREATER              : 17
ID                   : 6 7 7 26
IF                   : 32 33
INCREMENT            : 24
INT                  : 27
LCURLY               : 32 33 33 34
LOOP                 : 34
LPARENTHESIS         : 8 8 9 34
MODULUS              : 15
MULTIPLY             : 12
NOTEQUALS            : 21
OR                   : 20
PRINT                : 8 9
RCURLY               : 32 33 33 34
RPARENTHESIS         : 8 8 9 34
SEQUAL               : 23
SMALLER              : 18
STRING               : 29
SUBTRACT             : 14
VAR                  : 8
error                : 

Nonterminals, with rules where they appear

empty                : 2
expr                 : 6 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 25 32 33 34 34
start                : 0
statement            : 3 4 8 9 32 33 33 34
statements           : 1 3

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . statements
    (2) start -> . empty
    (3) statements -> . statements statement
    (4) statements -> . statement
    (5) empty -> .
    (6) statement -> . ID EQUALS expr
    (7) statement -> . ID EQUALS ID
    (8) statement -> . PRINT LPARENTHESIS VAR LPARENTHESIS statement RPARENTHESIS RPARENTHESIS
    (9) statement -> . PRINT LPARENTHESIS statement RPARENTHESIS
    (10) statement -> . expr
    (32) statement -> . IF expr LCURLY statement RCURLY
    (33) statement -> . IF expr LCURLY statement RCURLY ELSE LCURLY statement RCURLY
    (34) statement -> . LOOP LPARENTHESIS expr COMMA expr RPARENTHESIS LCURLY statement RCURLY
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr MULTIPLY expr
    (13) expr -> . expr ADD expr
    (14) expr -> . expr SUBTRACT expr
    (15) expr -> . expr MODULUS expr
    (16) expr -> . expr EEQUALS expr
    (17) expr -> . expr GREATER expr
    (18) expr -> . expr SMALLER expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr NOTEQUALS expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr SEQUAL expr
    (24) expr -> . expr INCREMENT
    (25) expr -> . expr DECREMENT
    (26) expr -> . ID
    (27) expr -> . INT
    (28) expr -> . FLOAT
    (29) expr -> . STRING
    (30) expr -> . CHAR
    (31) expr -> . BOOL

    $end            reduce using rule 5 (empty -> .)
    ID              shift and go to state 5
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    LOOP            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    start                          shift and go to state 1
    statements                     shift and go to state 2
    empty                          shift and go to state 3
    statement                      shift and go to state 4
    expr                           shift and go to state 6

state 1

    (0) S' -> start .



state 2

    (1) start -> statements .
    (3) statements -> statements . statement
    (6) statement -> . ID EQUALS expr
    (7) statement -> . ID EQUALS ID
    (8) statement -> . PRINT LPARENTHESIS VAR LPARENTHESIS statement RPARENTHESIS RPARENTHESIS
    (9) statement -> . PRINT LPARENTHESIS statement RPARENTHESIS
    (10) statement -> . expr
    (32) statement -> . IF expr LCURLY statement RCURLY
    (33) statement -> . IF expr LCURLY statement RCURLY ELSE LCURLY statement RCURLY
    (34) statement -> . LOOP LPARENTHESIS expr COMMA expr RPARENTHESIS LCURLY statement RCURLY
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr MULTIPLY expr
    (13) expr -> . expr ADD expr
    (14) expr -> . expr SUBTRACT expr
    (15) expr -> . expr MODULUS expr
    (16) expr -> . expr EEQUALS expr
    (17) expr -> . expr GREATER expr
    (18) expr -> . expr SMALLER expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr NOTEQUALS expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr SEQUAL expr
    (24) expr -> . expr INCREMENT
    (25) expr -> . expr DECREMENT
    (26) expr -> . ID
    (27) expr -> . INT
    (28) expr -> . FLOAT
    (29) expr -> . STRING
    (30) expr -> . CHAR
    (31) expr -> . BOOL

    $end            reduce using rule 1 (start -> statements .)
    ID              shift and go to state 5
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    LOOP            shift and go to state 9
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    statement                      shift and go to state 15
    expr                           shift and go to state 6

state 3

    (2) start -> empty .

    $end            reduce using rule 2 (start -> empty .)


state 4

    (4) statements -> statement .

    ID              reduce using rule 4 (statements -> statement .)
    PRINT           reduce using rule 4 (statements -> statement .)
    IF              reduce using rule 4 (statements -> statement .)
    LOOP            reduce using rule 4 (statements -> statement .)
    INT             reduce using rule 4 (statements -> statement .)
    FLOAT           reduce using rule 4 (statements -> statement .)
    STRING          reduce using rule 4 (statements -> statement .)
    CHAR            reduce using rule 4 (statements -> statement .)
    BOOL            reduce using rule 4 (statements -> statement .)
    $end            reduce using rule 4 (statements -> statement .)


state 5

    (6) statement -> ID . EQUALS expr
    (7) statement -> ID . EQUALS ID
    (26) expr -> ID .

    EQUALS          shift and go to state 16
    DIVIDE          reduce using rule 26 (expr -> ID .)
    MULTIPLY        reduce using rule 26 (expr -> ID .)
    ADD             reduce using rule 26 (expr -> ID .)
    SUBTRACT        reduce using rule 26 (expr -> ID .)
    MODULUS         reduce using rule 26 (expr -> ID .)
    EEQUALS         reduce using rule 26 (expr -> ID .)
    GREATER         reduce using rule 26 (expr -> ID .)
    SMALLER         reduce using rule 26 (expr -> ID .)
    AND             reduce using rule 26 (expr -> ID .)
    OR              reduce using rule 26 (expr -> ID .)
    NOTEQUALS       reduce using rule 26 (expr -> ID .)
    GEQUAL          reduce using rule 26 (expr -> ID .)
    SEQUAL          reduce using rule 26 (expr -> ID .)
    INCREMENT       reduce using rule 26 (expr -> ID .)
    DECREMENT       reduce using rule 26 (expr -> ID .)
    ID              reduce using rule 26 (expr -> ID .)
    PRINT           reduce using rule 26 (expr -> ID .)
    IF              reduce using rule 26 (expr -> ID .)
    LOOP            reduce using rule 26 (expr -> ID .)
    INT             reduce using rule 26 (expr -> ID .)
    FLOAT           reduce using rule 26 (expr -> ID .)
    STRING          reduce using rule 26 (expr -> ID .)
    CHAR            reduce using rule 26 (expr -> ID .)
    BOOL            reduce using rule 26 (expr -> ID .)
    $end            reduce using rule 26 (expr -> ID .)
    RPARENTHESIS    reduce using rule 26 (expr -> ID .)
    RCURLY          reduce using rule 26 (expr -> ID .)


state 6

    (10) statement -> expr .
    (11) expr -> expr . DIVIDE expr
    (12) expr -> expr . MULTIPLY expr
    (13) expr -> expr . ADD expr
    (14) expr -> expr . SUBTRACT expr
    (15) expr -> expr . MODULUS expr
    (16) expr -> expr . EEQUALS expr
    (17) expr -> expr . GREATER expr
    (18) expr -> expr . SMALLER expr
    (19) expr -> expr . AND expr
    (20) expr -> expr . OR expr
    (21) expr -> expr . NOTEQUALS expr
    (22) expr -> expr . GEQUAL expr
    (23) expr -> expr . SEQUAL expr
    (24) expr -> expr . INCREMENT
    (25) expr -> expr . DECREMENT

    ID              reduce using rule 10 (statement -> expr .)
    PRINT           reduce using rule 10 (statement -> expr .)
    IF              reduce using rule 10 (statement -> expr .)
    LOOP            reduce using rule 10 (statement -> expr .)
    INT             reduce using rule 10 (statement -> expr .)
    FLOAT           reduce using rule 10 (statement -> expr .)
    STRING          reduce using rule 10 (statement -> expr .)
    CHAR            reduce using rule 10 (statement -> expr .)
    BOOL            reduce using rule 10 (statement -> expr .)
    $end            reduce using rule 10 (statement -> expr .)
    RPARENTHESIS    reduce using rule 10 (statement -> expr .)
    RCURLY          reduce using rule 10 (statement -> expr .)
    DIVIDE          shift and go to state 17
    MULTIPLY        shift and go to state 18
    ADD             shift and go to state 19
    SUBTRACT        shift and go to state 20
    MODULUS         shift and go to state 21
    EEQUALS         shift and go to state 22
    GREATER         shift and go to state 23
    SMALLER         shift and go to state 24
    AND             shift and go to state 25
    OR              shift and go to state 26
    NOTEQUALS       shift and go to state 27
    GEQUAL          shift and go to state 28
    SEQUAL          shift and go to state 29
    INCREMENT       shift and go to state 30
    DECREMENT       shift and go to state 31


state 7

    (8) statement -> PRINT . LPARENTHESIS VAR LPARENTHESIS statement RPARENTHESIS RPARENTHESIS
    (9) statement -> PRINT . LPARENTHESIS statement RPARENTHESIS

    LPARENTHESIS    shift and go to state 32


state 8

    (32) statement -> IF . expr LCURLY statement RCURLY
    (33) statement -> IF . expr LCURLY statement RCURLY ELSE LCURLY statement RCURLY
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr MULTIPLY expr
    (13) expr -> . expr ADD expr
    (14) expr -> . expr SUBTRACT expr
    (15) expr -> . expr MODULUS expr
    (16) expr -> . expr EEQUALS expr
    (17) expr -> . expr GREATER expr
    (18) expr -> . expr SMALLER expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr NOTEQUALS expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr SEQUAL expr
    (24) expr -> . expr INCREMENT
    (25) expr -> . expr DECREMENT
    (26) expr -> . ID
    (27) expr -> . INT
    (28) expr -> . FLOAT
    (29) expr -> . STRING
    (30) expr -> . CHAR
    (31) expr -> . BOOL

    ID              shift and go to state 34
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    expr                           shift and go to state 33

state 9

    (34) statement -> LOOP . LPARENTHESIS expr COMMA expr RPARENTHESIS LCURLY statement RCURLY

    LPARENTHESIS    shift and go to state 35


state 10

    (27) expr -> INT .

    DIVIDE          reduce using rule 27 (expr -> INT .)
    MULTIPLY        reduce using rule 27 (expr -> INT .)
    ADD             reduce using rule 27 (expr -> INT .)
    SUBTRACT        reduce using rule 27 (expr -> INT .)
    MODULUS         reduce using rule 27 (expr -> INT .)
    EEQUALS         reduce using rule 27 (expr -> INT .)
    GREATER         reduce using rule 27 (expr -> INT .)
    SMALLER         reduce using rule 27 (expr -> INT .)
    AND             reduce using rule 27 (expr -> INT .)
    OR              reduce using rule 27 (expr -> INT .)
    NOTEQUALS       reduce using rule 27 (expr -> INT .)
    GEQUAL          reduce using rule 27 (expr -> INT .)
    SEQUAL          reduce using rule 27 (expr -> INT .)
    INCREMENT       reduce using rule 27 (expr -> INT .)
    DECREMENT       reduce using rule 27 (expr -> INT .)
    ID              reduce using rule 27 (expr -> INT .)
    PRINT           reduce using rule 27 (expr -> INT .)
    IF              reduce using rule 27 (expr -> INT .)
    LOOP            reduce using rule 27 (expr -> INT .)
    INT             reduce using rule 27 (expr -> INT .)
    FLOAT           reduce using rule 27 (expr -> INT .)
    STRING          reduce using rule 27 (expr -> INT .)
    CHAR            reduce using rule 27 (expr -> INT .)
    BOOL            reduce using rule 27 (expr -> INT .)
    $end            reduce using rule 27 (expr -> INT .)
    LCURLY          reduce using rule 27 (expr -> INT .)
    RPARENTHESIS    reduce using rule 27 (expr -> INT .)
    RCURLY          reduce using rule 27 (expr -> INT .)
    COMMA           reduce using rule 27 (expr -> INT .)


state 11

    (28) expr -> FLOAT .

    DIVIDE          reduce using rule 28 (expr -> FLOAT .)
    MULTIPLY        reduce using rule 28 (expr -> FLOAT .)
    ADD             reduce using rule 28 (expr -> FLOAT .)
    SUBTRACT        reduce using rule 28 (expr -> FLOAT .)
    MODULUS         reduce using rule 28 (expr -> FLOAT .)
    EEQUALS         reduce using rule 28 (expr -> FLOAT .)
    GREATER         reduce using rule 28 (expr -> FLOAT .)
    SMALLER         reduce using rule 28 (expr -> FLOAT .)
    AND             reduce using rule 28 (expr -> FLOAT .)
    OR              reduce using rule 28 (expr -> FLOAT .)
    NOTEQUALS       reduce using rule 28 (expr -> FLOAT .)
    GEQUAL          reduce using rule 28 (expr -> FLOAT .)
    SEQUAL          reduce using rule 28 (expr -> FLOAT .)
    INCREMENT       reduce using rule 28 (expr -> FLOAT .)
    DECREMENT       reduce using rule 28 (expr -> FLOAT .)
    ID              reduce using rule 28 (expr -> FLOAT .)
    PRINT           reduce using rule 28 (expr -> FLOAT .)
    IF              reduce using rule 28 (expr -> FLOAT .)
    LOOP            reduce using rule 28 (expr -> FLOAT .)
    INT             reduce using rule 28 (expr -> FLOAT .)
    FLOAT           reduce using rule 28 (expr -> FLOAT .)
    STRING          reduce using rule 28 (expr -> FLOAT .)
    CHAR            reduce using rule 28 (expr -> FLOAT .)
    BOOL            reduce using rule 28 (expr -> FLOAT .)
    $end            reduce using rule 28 (expr -> FLOAT .)
    LCURLY          reduce using rule 28 (expr -> FLOAT .)
    RPARENTHESIS    reduce using rule 28 (expr -> FLOAT .)
    RCURLY          reduce using rule 28 (expr -> FLOAT .)
    COMMA           reduce using rule 28 (expr -> FLOAT .)


state 12

    (29) expr -> STRING .

    DIVIDE          reduce using rule 29 (expr -> STRING .)
    MULTIPLY        reduce using rule 29 (expr -> STRING .)
    ADD             reduce using rule 29 (expr -> STRING .)
    SUBTRACT        reduce using rule 29 (expr -> STRING .)
    MODULUS         reduce using rule 29 (expr -> STRING .)
    EEQUALS         reduce using rule 29 (expr -> STRING .)
    GREATER         reduce using rule 29 (expr -> STRING .)
    SMALLER         reduce using rule 29 (expr -> STRING .)
    AND             reduce using rule 29 (expr -> STRING .)
    OR              reduce using rule 29 (expr -> STRING .)
    NOTEQUALS       reduce using rule 29 (expr -> STRING .)
    GEQUAL          reduce using rule 29 (expr -> STRING .)
    SEQUAL          reduce using rule 29 (expr -> STRING .)
    INCREMENT       reduce using rule 29 (expr -> STRING .)
    DECREMENT       reduce using rule 29 (expr -> STRING .)
    ID              reduce using rule 29 (expr -> STRING .)
    PRINT           reduce using rule 29 (expr -> STRING .)
    IF              reduce using rule 29 (expr -> STRING .)
    LOOP            reduce using rule 29 (expr -> STRING .)
    INT             reduce using rule 29 (expr -> STRING .)
    FLOAT           reduce using rule 29 (expr -> STRING .)
    STRING          reduce using rule 29 (expr -> STRING .)
    CHAR            reduce using rule 29 (expr -> STRING .)
    BOOL            reduce using rule 29 (expr -> STRING .)
    $end            reduce using rule 29 (expr -> STRING .)
    LCURLY          reduce using rule 29 (expr -> STRING .)
    RPARENTHESIS    reduce using rule 29 (expr -> STRING .)
    RCURLY          reduce using rule 29 (expr -> STRING .)
    COMMA           reduce using rule 29 (expr -> STRING .)


state 13

    (30) expr -> CHAR .

    DIVIDE          reduce using rule 30 (expr -> CHAR .)
    MULTIPLY        reduce using rule 30 (expr -> CHAR .)
    ADD             reduce using rule 30 (expr -> CHAR .)
    SUBTRACT        reduce using rule 30 (expr -> CHAR .)
    MODULUS         reduce using rule 30 (expr -> CHAR .)
    EEQUALS         reduce using rule 30 (expr -> CHAR .)
    GREATER         reduce using rule 30 (expr -> CHAR .)
    SMALLER         reduce using rule 30 (expr -> CHAR .)
    AND             reduce using rule 30 (expr -> CHAR .)
    OR              reduce using rule 30 (expr -> CHAR .)
    NOTEQUALS       reduce using rule 30 (expr -> CHAR .)
    GEQUAL          reduce using rule 30 (expr -> CHAR .)
    SEQUAL          reduce using rule 30 (expr -> CHAR .)
    INCREMENT       reduce using rule 30 (expr -> CHAR .)
    DECREMENT       reduce using rule 30 (expr -> CHAR .)
    ID              reduce using rule 30 (expr -> CHAR .)
    PRINT           reduce using rule 30 (expr -> CHAR .)
    IF              reduce using rule 30 (expr -> CHAR .)
    LOOP            reduce using rule 30 (expr -> CHAR .)
    INT             reduce using rule 30 (expr -> CHAR .)
    FLOAT           reduce using rule 30 (expr -> CHAR .)
    STRING          reduce using rule 30 (expr -> CHAR .)
    CHAR            reduce using rule 30 (expr -> CHAR .)
    BOOL            reduce using rule 30 (expr -> CHAR .)
    $end            reduce using rule 30 (expr -> CHAR .)
    LCURLY          reduce using rule 30 (expr -> CHAR .)
    RPARENTHESIS    reduce using rule 30 (expr -> CHAR .)
    RCURLY          reduce using rule 30 (expr -> CHAR .)
    COMMA           reduce using rule 30 (expr -> CHAR .)


state 14

    (31) expr -> BOOL .

    DIVIDE          reduce using rule 31 (expr -> BOOL .)
    MULTIPLY        reduce using rule 31 (expr -> BOOL .)
    ADD             reduce using rule 31 (expr -> BOOL .)
    SUBTRACT        reduce using rule 31 (expr -> BOOL .)
    MODULUS         reduce using rule 31 (expr -> BOOL .)
    EEQUALS         reduce using rule 31 (expr -> BOOL .)
    GREATER         reduce using rule 31 (expr -> BOOL .)
    SMALLER         reduce using rule 31 (expr -> BOOL .)
    AND             reduce using rule 31 (expr -> BOOL .)
    OR              reduce using rule 31 (expr -> BOOL .)
    NOTEQUALS       reduce using rule 31 (expr -> BOOL .)
    GEQUAL          reduce using rule 31 (expr -> BOOL .)
    SEQUAL          reduce using rule 31 (expr -> BOOL .)
    INCREMENT       reduce using rule 31 (expr -> BOOL .)
    DECREMENT       reduce using rule 31 (expr -> BOOL .)
    ID              reduce using rule 31 (expr -> BOOL .)
    PRINT           reduce using rule 31 (expr -> BOOL .)
    IF              reduce using rule 31 (expr -> BOOL .)
    LOOP            reduce using rule 31 (expr -> BOOL .)
    INT             reduce using rule 31 (expr -> BOOL .)
    FLOAT           reduce using rule 31 (expr -> BOOL .)
    STRING          reduce using rule 31 (expr -> BOOL .)
    CHAR            reduce using rule 31 (expr -> BOOL .)
    BOOL            reduce using rule 31 (expr -> BOOL .)
    $end            reduce using rule 31 (expr -> BOOL .)
    LCURLY          reduce using rule 31 (expr -> BOOL .)
    RPARENTHESIS    reduce using rule 31 (expr -> BOOL .)
    RCURLY          reduce using rule 31 (expr -> BOOL .)
    COMMA           reduce using rule 31 (expr -> BOOL .)


state 15

    (3) statements -> statements statement .

    ID              reduce using rule 3 (statements -> statements statement .)
    PRINT           reduce using rule 3 (statements -> statements statement .)
    IF              reduce using rule 3 (statements -> statements statement .)
    LOOP            reduce using rule 3 (statements -> statements statement .)
    INT             reduce using rule 3 (statements -> statements statement .)
    FLOAT           reduce using rule 3 (statements -> statements statement .)
    STRING          reduce using rule 3 (statements -> statements statement .)
    CHAR            reduce using rule 3 (statements -> statements statement .)
    BOOL            reduce using rule 3 (statements -> statements statement .)
    $end            reduce using rule 3 (statements -> statements statement .)


state 16

    (6) statement -> ID EQUALS . expr
    (7) statement -> ID EQUALS . ID
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr MULTIPLY expr
    (13) expr -> . expr ADD expr
    (14) expr -> . expr SUBTRACT expr
    (15) expr -> . expr MODULUS expr
    (16) expr -> . expr EEQUALS expr
    (17) expr -> . expr GREATER expr
    (18) expr -> . expr SMALLER expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr NOTEQUALS expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr SEQUAL expr
    (24) expr -> . expr INCREMENT
    (25) expr -> . expr DECREMENT
    (26) expr -> . ID
    (27) expr -> . INT
    (28) expr -> . FLOAT
    (29) expr -> . STRING
    (30) expr -> . CHAR
    (31) expr -> . BOOL

    ID              shift and go to state 36
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    expr                           shift and go to state 37

state 17

    (11) expr -> expr DIVIDE . expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr MULTIPLY expr
    (13) expr -> . expr ADD expr
    (14) expr -> . expr SUBTRACT expr
    (15) expr -> . expr MODULUS expr
    (16) expr -> . expr EEQUALS expr
    (17) expr -> . expr GREATER expr
    (18) expr -> . expr SMALLER expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr NOTEQUALS expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr SEQUAL expr
    (24) expr -> . expr INCREMENT
    (25) expr -> . expr DECREMENT
    (26) expr -> . ID
    (27) expr -> . INT
    (28) expr -> . FLOAT
    (29) expr -> . STRING
    (30) expr -> . CHAR
    (31) expr -> . BOOL

    ID              shift and go to state 34
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    expr                           shift and go to state 38

state 18

    (12) expr -> expr MULTIPLY . expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr MULTIPLY expr
    (13) expr -> . expr ADD expr
    (14) expr -> . expr SUBTRACT expr
    (15) expr -> . expr MODULUS expr
    (16) expr -> . expr EEQUALS expr
    (17) expr -> . expr GREATER expr
    (18) expr -> . expr SMALLER expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr NOTEQUALS expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr SEQUAL expr
    (24) expr -> . expr INCREMENT
    (25) expr -> . expr DECREMENT
    (26) expr -> . ID
    (27) expr -> . INT
    (28) expr -> . FLOAT
    (29) expr -> . STRING
    (30) expr -> . CHAR
    (31) expr -> . BOOL

    ID              shift and go to state 34
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    expr                           shift and go to state 39

state 19

    (13) expr -> expr ADD . expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr MULTIPLY expr
    (13) expr -> . expr ADD expr
    (14) expr -> . expr SUBTRACT expr
    (15) expr -> . expr MODULUS expr
    (16) expr -> . expr EEQUALS expr
    (17) expr -> . expr GREATER expr
    (18) expr -> . expr SMALLER expr
    (19) expr -> . expr AND expr
    (20) expr -> . expr OR expr
    (21) expr -> . expr NOTEQUALS expr
    (22) expr -> . expr GEQUAL expr
    (23) expr -> . expr SEQUAL expr
    (24) expr -> . expr INCREMENT
    (25) expr -> . expr DECREMENT
    (26) expr -> . ID
    (27) expr -> . INT
    (28) expr -> . FLOAT
    (29) expr -> . STRING
    (30) expr -> . CHAR
    (31) expr -> . BOOL

    ID              shift and go to state 34
    INT             shift and go to state 10
    FLOAT           shift and go to state 11
    STRING          shift and go to state 12
    CHAR            shift and go to state 13
    BOOL            shift and go to state 14

    expr                           shift and go to state 40

state 20
